syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="MyDiscount";
//Generated By BrewRobot:Wed Dec 06 16:20:41 CST 2017

message PBIFE_kq_getMyDiscountPage{
	///ife/kq/getMyDiscountPage.html
	message PageInfo{
		string pageSize = 1;	 //,页面大小,String,不校验,是,
		string pageIndex = 2;	 //,页码,String,不校验,是,
		string pageCount = 3;	 //,页数,String,不校验,是,
		string totalCount = 4;	 //,总数据,String,不校验,是,
	}

	message KaQuanList{
		string quanDetailsId = 1;	 //,卡券编号,String,不校验,是,KD＋X＋6位大序号＋时间后三位;X为红包R;满减F;加息A;抵价L;其他T
		string quanCatalogId = 2;	 //,卡券目录编号,String,不校验,是,
		string quanBatchId = 3;	 //,批次编号,String,不校验,是,
		string quanDetailsCode = 4;	 //,卡券外部编号,String,不校验,是,
		string quanDetailsPassword = 5;	 //,卡券外部密码,String,不校验,是,
		string quanIssueCompany = 6;	 //,卡券外部单位,String,不校验,是,
		string quanType = 7;	 //,卡券类型,String,不校验,是,
		string quanValue = 8;	 //,卡券面值,String,不校验,是,
		string quanName = 9;	 //,卡券名称,String,不校验,是,
		string quanFullReducedAmount = 10;	 //,满减金额,String,不校验,是,
		string quanArrivalPriceLadder = 11;	 //,抵价阶梯,String,不校验,是,
		string quanIncreaseInterestAmount = 12;	 //,加息本金,String,不校验,是,
		string quanCanCash = 13;	 //,是否可提现,String,不校验,是,0-不可提现;1-可提现
		string quanCanStack = 14;	 //,是否可叠加,String,不校验,是,0-不可叠加;1-可叠加
		string quanIsGloble = 15;	 //,是否全局,String,不校验,是,1-全局;0-非全局
		string quanApplyScene = 16;	 //,适用场景,String,不校验,是,提现;认购;转让
		string quanUseVoucher = 17;	 //,是否需要凭证,String,不校验,是,0-不需要凭证;1-需要凭证
		string quanSource = 18;	 //,卡券来源,String,不校验,是,0-内部;1-外部
		string quanCatalogRemark = 19;	 //,卡券使用说明,String,不校验,是,
		string quanNoticeMode = 20;	 //,通知方式,String,不校验,是,
		string quanDetailsFilename = 21;	 //,明细导入文件名,String,不校验,是,
		string quanGotFilename = 22;	 //,领取导入文件名,String,不校验,是,
		string quanHolderCode = 23;	 //,持有客户编号,String,不校验,是,
		string quanHolderMobile = 24;	 //,持有客户手机号码,String,不校验,是,
		string quanGotDate = 25;	 //,卡券领取日期,String,不校验,是,
		string quanGotTime = 26;	 //,卡券领取时间,String,不校验,是,
		string quanValidityStart = 27;	 //,卡券有效开始日期,String,不校验,是,
		string quanValidityEnd = 28;	 //,卡券有效结束日期,String,不校验,是,
		string quanGotChannel = 29;	 //,领取渠道,String,不校验,是,
		string quanGotTerminal = 30;	 //,领取终端,String,不校验,是,
		string quanGotRelevantActivity = 31;	 //,是否关联活动,String,不校验,是,0-无关联活动;1-有关联活动
		string quanGotActivityCode = 32;	 //,卡券领取关联活动编号,String,不校验,是,
		string quanGotActivityName = 33;	 //,卡券领取关联活动名称,String,不校验,是,
		string quanReleaseFlag = 34;	 //,收回标志,String,不校验,是,0-不收回;1-收回
		string quanUsedDate = 35;	 //,卡券核销日期,String,不校验,是,
		string quanUsedTime = 36;	 //,卡券核销时间,String,不校验,是,
		string quanUsedAmount = 37;	 //,卡券核销核销金额,String,不校验,是,
		string quanUsedScene = 38;	 //,核销场景,String,不校验,是,01-提现;02-认购;03转让
		string quanUsedTranscationAmount = 39;	 //,卡券核销交易金额,String,不校验,是,
		string quanUsedTransactionTxn = 40;	 //,卡券核销渠道交易流水,String,不校验,是,
		string quanUsedChannel = 41;	 //,核销渠道,String,不校验,是,
		string quanUsedTerminal = 42;	 //,核销终端,String,不校验,是,
		string quanUsedProductCode = 43;	 //,核销产品编号,String,不校验,是,
		string quanUsedSeriesCode = 44;	 //,核销系列编号,String,不校验,是,
		string quanCreateTime = 45;	 //,创建日期,String,不校验,是,
		string quanDetailsStatus = 46;	 //,卡券明细状态,String,不校验,是,99-草稿;00-待领取;10-已领取;20-已核销;30-已过期
		string isExpired = 47;	 //,卡券是否将要过期,String,不校验,是,1-是;0-否
		string quanCodeName = 48;	 //,卡券编号名称	String			如卡号，券号等
		string quanPwdName = 49;	 //,密码名称	String			如密码，交易码等
		string quanOtherQuanType = 50;	 //,其他券类型	String			面值-value;折扣-discount
		string codeType = 51;	 //,码类型	String			二维码、条型码等 qr-二维码 bar-条形码 text-文本
		string interfaceCode = 52;	 //,接口码	String			二维码、条型码等
		string linkAddress = 53;	 //,外链地址	String	

		string quanCode = 54;//,标识(1内链,2:外链)
	}


	repeated KaQuanList kaQuanList = 1;

	PageInfo pageInfo = 2;

	string allDetailsCount = 3; //,明细总条数,String,不校验,是,

	string availableCount = 4; //,已领取卡劵数量,String,不校验,是,

	string hasFailedCount = 5; //,已过期卡劵数量,String,不校验,是,

	string alreadyUsedCount = 6; //,已核销卡劵数量,String,不校验,是,


}

message Ret_PBIFE_kq_getMyDiscountPage{
	///ife/kq/getMyDiscountPage.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_kq_getMyDiscountPage data=3;


}

message REQ_PBIFE_kq_getMyDiscountPage{
	///ife/kq/getMyDiscountPage.html

	string kqType = 1; //,卡劵类型,String,不校验,否,

	string status = 2; //,状态,String,不校验,否,

	string pageIndex = 3; //,当前页,String,不校验,否,

	string pageSize = 4; //,页大小,String,不校验,否,


}