syntax = "proto3";

package onight.zjfae.afront.gens;
//红包提现
option java_outer_classname="Withdrawals";
//Generated By BrewRobot:Wed Oct 19 09:47:31 CST 2016

message PBIFE_kq_kqWithdrawals{
	///ife/kq/kqWithdrawals.html


}

message Ret_PBIFE_kq_kqWithdrawals{
	///ife/kq/kqWithdrawals.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_kq_kqWithdrawals data=3;


}

message REQ_PBIFE_kq_kqWithdrawals{
	///ife/kq/kqWithdrawals.html

	string quanType = 1; //,卡券类型,String,不校验,否,多张卡券｜隔开

	string quanValue = 2; //,核销金额,String,不校验,否,不包含加息值的汇总值

	string quanDetailsId = 3; //,卡券编号,String,不校验,否,多张卡券｜隔开


}